--- a/public/style.css
+++ b/public/style.css
@@ -1,22 +1,24 @@
 body {
     padding: 10px;
+    font-family: sans-serif;
+    font-size: 12px;
 }
 
 #input-form {
     display: block;
     border: solid 2px gray;
 }
-#input-form .url {
+#input-form > label {
     display: block;
-    width: 300px;
 }
-#input-form .file {
-    display: none;
+#input-form .url {
+    width: 700px;
 }
 #input-form .csv {
-    display: block;
     font-family: monospace;
     font-size: 10px;
+    width: 700px;
+    min-height: 50px;
 }
 
 #grid {;
