--- a/public/style.css
+++ b/public/style.css
@@ -26,3 +26,32 @@ body {
     border: solid 2px gray;
     font-size: 12px;
 }
+
+#mask {
+    background-color: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    display: none;
+}
+
+#mask .message {
+    position: absolute;
+    width: 480px;
+    height: 30px;
+    line-height: 30px;
+    left: 50%;
+    top: 50%;
+    margin-left: -250px;
+    margin-top: -25px;
+    padding: 10px;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 5px;
+}
