--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,5 +26,19 @@
     <script src="SlickGrid/slick.grid.js"></script>
     <script src="CSVToArray.js"></script>
     <script src="csv-viewer.js"></script>
+
+    <% if (googleAnalyticsID) { %>
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', <%= JSON.stringify(googleAnalyticsID) %>]);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
+    <% } %>
 </body>
 </html>
