--- a/public/style.css
+++ b/public/style.css
@@ -1,12 +1,19 @@
 body {
-    padding: 10px;
+    margin: 0;
+    padding: 0;
     font-family: sans-serif;
     font-size: 12px;
 }
 
+#meta {
+    float: right;
+    padding: 5px;
+}
+
 #input-form {
     display: block;
-    border: solid 2px gray;
+    padding: 10px;
+    border-bottom: solid 2px gray;
 }
 #input-form > label {
     display: block;
@@ -23,7 +30,6 @@ body {
 
 #grid {;
     min-height: 200px;
-    border: solid 2px gray;
     font-size: 12px;
 }
 
