--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css" type="text/css"/>
 </head>
 <body>
+    <div id="meta">
+        <a target="_blank" href="<%= repoURL %>">Repo</a>
+    </div>
     <form id="input-form">
         <label>URL: <input type="text" placeholder="URL" class="url"/></label>
         <label>CSV: <textarea placeholder="comma-separated values" wrap="off" class="csv"></textarea></label>
@@ -30,7 +33,7 @@
     <% if (googleAnalyticsID) { %>
     <script type="text/javascript">
       var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', <%= JSON.stringify(googleAnalyticsID) %>]);
+      _gaq.push(['_setAccount', <%-: googleAnalyticsID | json %>]);
       _gaq.push(['_trackPageview']);
 
       (function() {
